@@ -38,3 +38,6 @@ clean_restart ${testfile}.x
 # is that the file and fullname fields are now inverted.
 gdb_test "interpreter-exec mi -file-list-exec-source-files" \
          ".*{file=\"file1\\.txt\",fullname=\".+file1\\.txt\"}.*"
+
+# And `info sources' should return the fullname incl. the directories.
+gdb_test "info sources" {[/\\]file1\.txt}
