@@ -1,3 +1,7 @@
+2011-06-10  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.dwarf2/dw2-filename.exp (info sources): New testcase.
+
 2011-05-31  Pedro Alves  <pedro@codesourcery.com>
 
 	* gdb.arch/i386-dr3-watch.c: New file.
